# VeeThree

./: .gitignore  COST_METRICS_REFERENCE.md  basics.py  conventional_cnn.py  edge_lut_model.py  edge_lut_train.py  fe_lut_model.py  fe_lut_train.py  gameplan.py  lut_model.py  lut_train.py  main.py  model.npz  n_basics.py  ndd.py  pyproject.toml  run_sweep_all.sh  run_training.py  test_select_n.py  test_specs.py  timing_experiment.py
Deprecated/: main.py  typical_cnn.py
Deprecated/nddplayground/: main.py  pooling_layer.py  visualization.py
Deprecated/performance_comp/: all_results_c4.txt  config.py  rank_encodings.py  run_experiment.py  run_log_c4.txt  run_log_dense.txt
Deprecated/performance_comp_constrained/: config.py  (+1 more)
benchmark/: __init__.py  cnn_sweep.py  fe_sweep.py  lut_sweep.py  metrics.py  plot_benchmark_frontiers.py  plot_pareto.py
feature_engineering/: SPEC.md  claude.md  project_description.txt  pyproject.toml  sequence_functional_description.txt
nddplayground/: data_loader.py  l0_layer.py  pyproject.toml
performance_comp/: all_results.txt  data_loader.py  model.py  run_log.txt  train.py
performance_comp_constrained/: run_experiment.py
pooled_rank_experiment/: model.py  train.py
removal_experiment/: analyze_activations.py  analyze_custom_filters.py  cnn.py  config.py  data_loader.py  grid_search.py  quick_plot.py  run_experiment.py  visualization.py
results/: benchmark.csv  cnn_pareto.csv  fe_pareto.csv  lut_pareto.csv
sequential_removal_experiment/: model.py  rank_encodings.py  run_experiment.py  run_log.txt  test_training_length.py
(+528 files in other folders)
